syntax = "proto2";

option java_package="com.waben.stock.futuresgateway.yisheng.common.protobuf";
option java_outer_classname = "FuturesQuoteData";

message FuturesQuoteDataBase {
  	optional string time = 1;
	optional string commodityNo = 2;
	optional string contractNo = 3;
	optional string bidPrice = 4;
	optional string bidPrice2 = 5;
	optional string bidPrice3 = 6;
	optional string bidPrice4 = 7;
	optional string bidPrice5 = 8;
	optional int64 bidSize = 9;
	optional int64 bidSize2 = 10;
	optional int64 bidSize3 = 11;
	optional int64 bidSize4 = 12;
	optional int64 bidSize5 = 13;
	optional string askPrice = 14;
	optional string askPrice2 = 15;
	optional string askPrice3 = 16;
	optional string askPrice4 = 17;
	optional string askPrice5 = 18;
	optional int64 askSize = 19;
	optional int64 askSize2 = 20;
	optional int64 askSize3 = 21;
	optional int64 askSize4 = 22;
	optional int64 askSize5 = 23;
	optional string lastPrice = 24;
	optional int64 lastSize = 25;
	optional string openPrice = 26;
	optional string highPrice = 27;
	optional string lowPrice = 28;
	optional string closePrice = 29;
	optional int64 volume = 30;
	optional int64 totalVolume = 31;
}